--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <nav>
             <ul class="header-menu">
-                <li><a href="#experiencia">Expreiência</a></li>
+                <li><a href="#experiencia">Experiência</a></li>
                 <li><a href="#formacao">Formação</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
